@@ -1,4 +1,6 @@
 2.1.9
+ * (cqlsh) Allow the SSL protocol version to be specified through the
+   config file or environment variables (CASSANDRA-9544)
 Merged from 2.0:
  * Scrub (recover) sstables even when -Index.db is missing, (CASSANDRA-9591)
 
